# sampleCMakeWIthCode

./: .gitignore  CMakeLists.txt  chi_group_result_aggregator.h  chi_job.h  chi_job_result.h  main.cpp
